--- a/Algorithm/Algorithm/Algorithm.vcxproj
+++ b/Algorithm/Algorithm/Algorithm.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="10845.cpp">
+    <ClCompile Include="Algorithm.cpp">
       <SubType>
       </SubType>
     </ClCompile>
