--- a/algorithmCS/algorithmCS/algorithmCS.csproj
+++ b/algorithmCS/algorithmCS/algorithmCS.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="1697.cs" />
+  </ItemGroup>
+
 </Project>
