--- a/algorithmCS/algorithmCS/algorithmCS.csproj
+++ b/algorithmCS/algorithmCS/algorithmCS.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <Compile Remove="1697.cs" />
     <Compile Remove="1764.cs" />
+    <Compile Remove="1931.cs" />
   </ItemGroup>
 
 </Project>
