--- a/algorithmCS/algorithmCS/algorithmCS.csproj
+++ b/algorithmCS/algorithmCS/algorithmCS.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -11,6 +11,7 @@
     <Compile Remove="1697.cs" />
     <Compile Remove="1764.cs" />
     <Compile Remove="1931.cs" />
+    <Compile Remove="2606.cs" />
   </ItemGroup>
 
 </Project>
