--- a/algorithmCS/algorithmCS/algorithmCS.csproj
+++ b/algorithmCS/algorithmCS/algorithmCS.csproj
@@ -12,6 +12,7 @@
     <Compile Remove="1764.cs" />
     <Compile Remove="1931.cs" />
     <Compile Remove="2606.cs" />
+    <Compile Remove="2630.cs" />
   </ItemGroup>
 
 </Project>
