--- a/algorithmCS/algorithmCS/algorithmCS.csproj
+++ b/algorithmCS/algorithmCS/algorithmCS.csproj
@@ -14,6 +14,7 @@
     <Compile Remove="2606.cs" />
     <Compile Remove="2630.cs" />
     <Compile Remove="2805.cs" />
+    <Compile Remove="7576.cs" />
   </ItemGroup>
 
 </Project>
