--- a/algorithmCS/algorithmCS/algorithmCS.csproj
+++ b/algorithmCS/algorithmCS/algorithmCS.csproj
@@ -15,6 +15,7 @@
     <Compile Remove="2630.cs" />
     <Compile Remove="2805.cs" />
     <Compile Remove="7576.cs" />
+    <Compile Remove="9095.cs" />
   </ItemGroup>
 
 </Project>
